--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,17 @@
       <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       </li>
-    <% else %>
+      
       <li>
+        <%= link_to "マイページ", user_path(current_user.id) %>
+      </li>
+      
+      
+    <% else %>
+      <li class="nav-item">
         <%= link_to "新規登録", new_user_registration_path %>
       </li>
-      <li>
+      <li class="nav-item">
         <%= link_to "ログイン", new_user_session_path %>
       </li>
     <% end %>
