--- a/app/views/sleeps/show.html.erb
+++ b/app/views/sleeps/show.html.erb
@@ -7,4 +7,39 @@
   <% if @sleep.user == current_user %>
     <%= link_to "削除", sleep_path(@sleep), method: :delete %>
   <% end %>
+   <% if @sleep.favorited_by?(current_user) %>
+    <p>
+      <%= link_to sleep_favorites_path(@sleep), method: :delete do %>
+        ♥<%= @sleep.favorites.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to sleep_favorites_path(@sleep), method: :post do %>
+        ♡<%= @sleep.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
+  
+</div>
+
+<div class="comments">
+<p>コメント件数：<%= @sleep.post_comments.count %></p>
+<% @sleep.post_comments.each do |post_comment| %>
+  <p><%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
+  <%= post_comment.user.name %>
+  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+  <% if post_comment.user == current_user %>
+  <div class="comment-delete">
+    <%= link_to "削除", sleep_post_comment_path(post_comment.sleep, post_comment), method: :delete %>
+  </div>
+  <% end %>
+  
+<% end %>
+</div>
+<div class="new-comment">
+<%= form_with(model:[@sleep, @post_comment], local: true) do |f| %>
+  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+  <%= f.submit "送信する" %>
+<% end %>
 </div>
