--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
               <%= link_to '投稿フォーム', new_sleep_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
+              <%= link_to '利用者一覧', users_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
               <%= link_to 'マイページ', user_path(current_user.id), class: 'nav-link text-dark' %>
             </li>
             <% else %>
