--- a/app/views/sleeps/new.html.erb
+++ b/app/views/sleeps/new.html.erb
@@ -11,11 +11,21 @@
         <% end %>
         <%= form_with model: @sleep, local:true do |f| %>
           <%= f.attachment_field :image, class: "w-100" %>
+          <p>"睡眠ログアプリのキャプチャ画像を添付してください"</p>
           <div class="input-group mb-3 mt-4">
             <div class="input-group-prepend">
               <span class="input-group-text" aria-hidden="true"><i class="fas fa-building"></i></span>
             </div>
-            <%= f.text_field :title, class:"form-control", placeholder:"Sleep Title" %>
+            <div><%= f.text_field :title, class:"form-control", placeholder:"タイトル" %></div>
+        
+            <div>
+            <label class="control-label" for="">就寝日時</label>
+            <%= f.datetime_select :bedtime, {}, class: 'form-control' %>
+            </div>
+            <p>
+            <label class="control-label" for="">起床日時</label>
+            <%= f.datetime_select :waketime, {}, class: 'form-control' %>
+            </p>
           </div>
           <%= f.text_area :opinion, class:"form-control", rows:"3", placeholder:"Coment here" %>
           <hr>
