--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,5 +5,9 @@
     <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
   <label for="inputImage">ProfileImage</label>
   <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+  <div class="form-group">
+  <%= f.label :introduction %>
+  <%= f.text_area :introduction,  placeholder: "平均睡眠時間、睡眠へのこだわりなど" , class: "form-control introduction" %>
+  </div>
   <%= f.submit "変更を保存" %>
 <% end %>
