--- a/app/views/sleeps/show.html.erb
+++ b/app/views/sleeps/show.html.erb
@@ -20,13 +20,13 @@
       <% end %>
     </p>
   <% end %>
-  
+
 </div>
 
 <div class="comments">
 <p>コメント件数：<%= @sleep.post_comments.count %></p>
 <% @sleep.post_comments.each do |post_comment| %>
-  <p><%= attachment_image_tag sleep.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
+  <p><%= attachment_image_tag post_comment.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
   <%= post_comment.user.name %>
   <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
   <% if post_comment.user == current_user %>
@@ -34,7 +34,7 @@
     <%= link_to "削除", sleep_post_comment_path(post_comment.sleep, post_comment), method: :delete %>
   </div>
   <% end %>
-  
+
 <% end %>
 </div>
 <div class="new-comment">
