--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <p>More Sleep, More Fun!</p>
+            <p>睡眠こそアピールしよう</p>
             <%= image_tag('logo.png') %>
           </div>
           <div class="col-md-8">
