--- a/app/assets/stylesheets/sleeps.scss
+++ b/app/assets/stylesheets/sleeps.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Sleeps controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.sleep-body {
+  display: flex;
+  justify-content: center;
+}
+.form-group {
+  display: flex;
+  justify-content: center;
+}
